# FARM-Todo-APP

./: README.md
backend/: pyproject.toml
backend/todo/: database.py  main.py  model.py  pyproject.toml
backend/todo/todo/: database.py  main.py  model.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: create.jsx  layout.jsx  list.jsx  todo.jsx  update.jsx
