[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zisankarsatar <zisankarsatar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
motor = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
